--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav>
             <div class="mobile-nav">
                 <ul class="nav-items">
-                    <li class="nav-item"><i class="fas fa-home"></i><p>Homepage</p></li>
+                    <li class="nav-item active"><i class="fas fa-home"></i><p>Homepage</p></li>
                     <li class="nav-item"><i class="fas fa-box"></i><p>Work</p></li>
                     <li class="nav-item"><i class="fas fa-book-open"></i><p>Blog</p></li>
                     <li class="nav-item"><i class="fas fa-users"></i><p>About Us</p></li>
